toggle spacing fixed

--- a/src/layout/_layout.scss
+++ b/src/layout/_layout.scss
@@ -102,9 +102,9 @@
         border-radius: 5px;
         position: absolute;
         right: 30px;
+        top: 30px;
         @include flex(column, center, center);
         padding: 8px;
-
         .toggleBox {
             width: 100%;
             position: relative;
